feat: migrate current sources to access recipes
